Fix Monthly Leaderboard Spacing

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/leaderboard.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/leaderboard.css
@@ -64,6 +64,13 @@
     overflow-y: auto;
 }
 
+.leaderboard-table .league-card-body.inner-card {
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
+    padding-left: 3em;
+    padding-right: 3em;
+}
+
 .carousel-item-content .leaderboard-card {
     width: 100%;
     min-width: 0;
